# xmltoexcel

./: .gitignore  CODE_REVIEW.md  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  refactor.py  requirements.txt  ~$XMLS Fev.xlsx
.github/workflows/: build-windows.yml  tests.yml
core/: archive_handler.py  constants.py  excel_exporter.py  models.py  pipeline.py  strategy.py  worker.py
cte/: constants.py  cte_event_parser.py  cte_parser.py  cte_strategy.py  event_parser.py  parser.py
nfe/: __init__.py  constants.py  event_parser.py  nfe_constants.py  nfe_event_parser.py  nfe_parser.py  nfe_strategy.py  parser.py
parsers/: base_parser.py  cte_event_parser.py  cte_parser.py  nfe_event_parser.py  nfe_parser.py
shared/: archive_handler.py  constants.py  excel_exporter.py  models.py  pipeline.py  worker.py
tests/: conftest.py
tests/core/: __init__.py  test_models.py  test_pipeline_dedup.py
tests/cte/: test_cte_event_parser.py  test_parser.py
tests/nfe/: test_event_parser.py  test_parser.py
tests/parsers/: __init__.py  test_cte_event_parser.py  test_cte_parser.py  test_nfe_event_parser.py  test_nfe_parser.py
tests/shared/: test_models.py  test_pipeline_dedup.py
ui/: main_window.py
