[project]
name = "xmltoexcel"
version = "0.2.0"
description = "Pipeline de dados fiscais: extrai XMLs de CT-e de arquivos compactados e gera planilhas Excel organizadas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "rarfile>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
]

[project.scripts]
xmltoexcel = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=parsers --cov=core --cov-report=term-missing"

[tool.coverage.run]
omit = ["ui/*", "main.py", "tests/*"]
